help prevent column break in UL

--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -74,6 +74,7 @@
 		list-style: square;
 		padding-left: 1rem;
 		break-inside: avoid;
+		break-before: avoid;
 		clear: both;
 	}
 
